[package]
name = "real_time_dedup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "kafka_consumer"
path = "src/kafka_consumer.rs"

[[bin]]
name = "kafka_producer"
path = "src/kafka_producer.rs"

[dependencies]
hyperloglog = "1.0.2"
rand = "0.8"
rayon = "1.7"
redis = "0.23"
rdkafka = { version = "0.29", features = ["tokio"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v4"] }

